# eecs249A-final-project

./: README.md
P-RTA/Src/: CMakeLists.txt
P-RTA/Src/PCompiler/CompilerCore/: DefaultTranslationErrorHandler.cs
P-RTA/Src/PCompiler/CompilerCore/Backend/Debugging/: IrToPseudoP.cs
P-RTA/Src/PCompiler/CompilerCore/Parser/: PParser.g4
P-RTA/Src/PCompiler/CompilerCore/TypeChecker/: StatementVisitor.cs
P-RTA/Src/PCompiler/CompilerCore/TypeChecker/AST/Declarations/: Function.cs  Machine.cs  PEvent.cs
P-RTA/Src/PCompiler/CompilerCore/TypeChecker/AST/States/: State.cs
P/Src/PCompiler/CompilerCore/: ITranslationErrorHandler.cs
P/Src/PCompiler/CompilerCore/Backend/C/: CCodeGenerator.cs
P/Src/PCompiler/CompilerCore/Parser/: PLexer.g4
P/Src/PCompiler/CompilerCore/TypeChecker/: DeclarationVisitor.cs  FunctionBodyVisitor.cs
P/Src/PRuntimes/CRuntime/API/: PrtProgram.h
P/Src/PRuntimes/CRuntime/Core/: PrtExecution.c  PrtExecution.h
P/Src/PRuntimes/CRuntime/LinuxUser/: PrtLinuxUserConfig.c  PrtLinuxUserConfig.h
ego_robot/: CMakeLists.txt  battery.p  ego_robot.c  ego_robot.h  ego_robot.p  ego_robot_main.cpp  helper.cpp  helper.hpp  monitor.cpp  motion_planner.p  motion_primitives.p  pid_parameters.txt  socket.cpp  socket.hpp
experiments/webots_test/controllers/kobuki/: Makefile  devices.cpp  devices.h  kobuki.cpp
experiments/webots_test/protos/: KobukiStandalone.proto
experiments/webots_test/worlds/: blank.wbt  example.wbt
kobuki-sample-executables/: demo_buttons  demo_chirp  demo_custom_logging  demo_data_stream  demo_raw_data_stream  demo_simple_loop  demo_velocity_commands  kobuki-simple-keyop  kobuki-version-info  kobuki_build_instructions.txt
kobuki-workspace/: README.txt
kobuki-workspace/src/chirp/: CMakeLists.txt  package.xml
monitor/: main.cpp  monitor.cpp  monitor.hpp
random_walker/: CMakeLists.txt  helper.cpp  helper.hpp  random_walker.c  random_walker.h  random_walker.p  random_walker_main.cpp
robot/: CMakeLists.txt  Main.cpp  helper.hpp  robot.c  robot.h  robot.p
visualization/: main.cpp  socket.cpp  socket.hpp  visualization.py
